# rtw-llm-research-starter

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  RUNBOOK.md  pyproject.toml
configs/: baselines.yaml  experiment_rtw_countdown.yaml
docs/: AUTORESEARCH_PROGRAM.md  BASELINE_INVENTORY_AND_NEXT_EXPERIMENTS_20260708.md  BOTTLENECK_DIAGNOSIS_20260709.md  COUNTDOWN_V2_DATASET_CARD.md  CURRENT_PROJECT_STATUS_AND_PAPER_ASSESSMENT.md  DATASET_CARD.md  DATASET_CARD_MICROCODE.md  E4_TRAINER_DESIGN.md  E5_PRECONDITION_TEACHER_MECHANISM_20260710.md  E5_PREREGISTRATION_DRAFT.md  EXPERIMENT_LEDGER.md  EXPERIMENT_PLAN.md  GATE0_LOCAL_LADDER_REPORT.md  HARDWARE_AND_INFRA.md  HARNESS_OOD_ANALYSIS_CONTRACT.md  I8B_PER_KEY_STATIC_WEIGHTS_PLAN.md  LITERATURE_POSITIONING.md  MECHANISM_AUDIT_LOCAL_BANKS_20260709.md  NEXT_IDEAS.md  NEXT_STEPS.md  PAPER1_ASSETS.md  PAPER2_FROZEN_PROTOCOL.md  PAPER2_MICROCODE_TESTBED_SPEC.md  PAPER_OUTLINE.md  POST_SFT_ADAPTIVITY_PRECONDITION_20260709.md  PROJECT_DESIGN.md  README.md  RESEARCH_AGENDA_20260720.md  RESEARCH_GOAL_AND_PLANS_20260709.md  S3_SANDBOX_HARDENING_PLAN.md  S5_BANDIT_TEACHER_REPLAY_PLAN.md  STRATEGIC_REPIVOT_20260709.md  THROUGHPUT_BATCHED_BESTOFN_PLAN.md  V06B_ADAPTIVE_STATIC_SEED0_REPORT.md  V06B_LEGALITY_TRACKER.md  V06C_TEACHER_STABILITY.md  V06D_SEED_EXPANSION_AND_PAPER_PLAN.md  V07_PROMPT_LENGTH_DIAGNOSTIC_AND_PAPER_PLAN.md  V08_CONDITIONAL_LEGALITY_TO_EXACTNESS_PLAN.md  V09_BEST_OF_N_RERANKING_PLAN.md  (+12 more)
evals/: countdown_lm_eval.yaml
outputs/: v09_seed_expansion_paired.json  v09_seed_expansion_summary.csv  (+4 more)
(+126 files in other folders)
